# wgse_engine

./: Cargo.toml  README.md  build.rs
.github/workflow/: main_release.yml
src/: errors.rs  instructions.rs  kernel.rs  lib.rs  memory.rs  stacks.rs  types.rs
src/.autogen/: README.md  interface.json
src/.autogen/wgse_commands/: nope.json  panic.json
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
